@@ -1,3 +1,8 @@
+Fri Oct 31 11:37:15 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/exact_index_terms.py: Add unittest which I forgot
+	  to commit a while ago.
+
 Fri Oct 31 11:27:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: Update to new version of packages (11584).
